fixed page headers going off screen when autodemo hit

--- a/DjangoProto/InteractiveMath_prj/static/css/DynamicTrig1.css
+++ b/DjangoProto/InteractiveMath_prj/static/css/DynamicTrig1.css
@@ -8,21 +8,14 @@ This is the style sheet for the DynamicTrig1.html page
 }
 /***************************/
 /* put a label up and an expln/to do selector input box */
-#headerAndCtl_DT1 h1{
+#headerAndCtl_DT1{
 	position: relative;
 	top: 0px;
 	left: 150px;
 	width: auto;
-}
-
-/* text header of page activity*/
-#HeaderTrig_DT1 {
-	position: absolute;
-	border: 0px;
-	left: 300px;
 	font-weight: bold;
 	font-size: 32px;
-	resize: none;
+	resize: none
 }
 
 /************Params that describe and control activity***************/
